--- a/index.html
+++ b/index.html
@@ -4,16 +4,12 @@
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'>
   <link rel="shortcut icon" href="avatar.jpg" type="image/webp">
   <link rel="icon" href="avatar.jpg" type="image/webp">
-  <meta name="description" content="All profiles links of Samir Paul available here."/>
   <meta property="og:image:secure_url" content="avatar.jpg"/>
   <meta property="og:image" content="avatar.jpg"/>
   <meta property="profile:username" content="hlmrgrt"/>
   <link rel="preload" as="image" href="avatar.jpg" />
-  <title>Samir Paul All Links</title>
-  <link rel="apple-touch-icon" sizes="180x180" href="https://bio.link/apple-touch-icon.png">
-  <link rel="manifest" href="https://bio.link/manifest.json">
-  <link rel="dns-prefetch" href="https://analytics.bio.link">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="prefetch" href="avatar.jpg" />
+  <title>Helena - Linktree</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;display=swap" rel="stylesheet">
 
     <style>
